...
            </objects>
            <point key="canvasLocation" x="-422" y="130"/>
        </scene>
        <!--Map of Campus-->
        <scene sceneID="8HL-EG-sau">
            <objects>
                <viewControllerPlaceholder storyboardName="Map of Campus" id="37O-nT-qPx" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dAK-9h-DNa" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1402" y="92"/>
        </scene>
        <!--RPI Tours-->
        <scene sceneID="Dke-eK-XAc">
...
                            <outlet property="dataSource" destination="PCb-6i-b1r" id="fhV-yR-niE"/>
                            <outlet property="delegate" destination="PCb-6i-b1r" id="I9L-6i-Yz1"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="RPI Tours" id="rZ5-q5-5Zx">
                        <barButtonItem key="backBarButtonItem" title="Back" id="tNX-tE-Fid"/>
                        <barButtonItem key="leftBarButtonItem" title="Map" id="4Km-2R-TTx">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <segue destination="37O-nT-qPx" kind="show" id="YJT-qg-fwE"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Settings" id="i5Y-u6-ywt">
...
